--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -309,7 +309,7 @@
                         </ScrollPane>
                      </children>
                   </VBox>
-                  <Label layoutX="106.0" layoutY="589.0" prefHeight="26.0" prefWidth="189.0" styleClass="font_jasmine_25pt" stylesheets="@style/PrimaryTheme.css" text="คะแนนของสินค้า" textFill="#f99f28" />
+                  <Label layoutX="105.0" layoutY="589.0" prefHeight="26.0" prefWidth="166.0" styleClass="font_jasmine_25pt" stylesheets="@style/PrimaryTheme.css" text="คะแนนของสินค้า" textFill="#f99f28" />
                   <Button layoutX="819.0" layoutY="588.0" mnemonicParsing="false" onAction="#handleToBuyBook" prefHeight="46.0" prefWidth="145.0" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
@@ -324,6 +324,20 @@
                         </GridPane>
                      </children>
                   </VBox>
+                  <HBox layoutX="64.0" layoutY="809.0" prefHeight="52.0" prefWidth="316.0">
+                     <children>
+                        <Label styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ความคิดเห็นทั้งหมด">
+                           <HBox.margin>
+                              <Insets top="18.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label fx:id="numberOfComments" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="จำนวนความคิดเห็น">
+                           <HBox.margin>
+                              <Insets left="20.0" top="18.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
                </children>
             </AnchorPane>
         </content>
