--- a/src/main/resources/ku/cs/buyBookPopup.fxml
+++ b/src/main/resources/ku/cs/buyBookPopup.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" style="-fx-background-radius: 20; -fx-background-color: FFFCF1;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ConfirmOrderController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" style="-fx-background-radius: 20; -fx-background-color: FFFCF1;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ConfirmOrderController">
    <children>
       <Text layoutX="148.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="สั่งซื้อสินค้า" wrappingWidth="111.4278564453125">
          <font>
@@ -30,11 +30,6 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Text>
-      <ImageView fitHeight="27.0" fitWidth="26.0" layoutX="351.0" layoutY="12.0" onMouseClicked="#handleClosePage" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/BackIcon.png" />
-         </image>
-      </ImageView>
       <VBox layoutX="70.0" layoutY="74.0" maxHeight="304.0" prefHeight="15.0" prefWidth="304.0">
          <children>
             <Label fx:id="bookNameLabel" maxWidth="304.0" prefHeight="26.0" prefWidth="304.0" text="bookName" wrapText="true">
@@ -85,6 +80,15 @@
             <Font name="JasmineUPC" size="23.0" />
          </font>
       </Text>
+      <Button layoutX="348.0" layoutY="12.0" mnemonicParsing="false" onAction="#handleClosePage" style="-fx-background-color: transparent;">
+         <graphic>
+            <ImageView fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/BackIcon.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
    <effect>
       <Lighting diffuseConstant="1.34">
