--- a/src/main/resources/ku/cs/aboutUsChoice.fxml
+++ b/src/main/resources/ku/cs/aboutUsChoice.fxml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="651.0" prefWidth="940.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.scene.AboutUsChoiceController">
+<AnchorPane prefHeight="651.0" prefWidth="940.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.scene.AboutUsChoiceController">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -52,14 +62,14 @@
                         </Rectangle>
                         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="JAVAPAI">
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="คู่มือการใช้งาน">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
                                  <VBox.margin>
                                     <Insets top="5.0" />
                                  </VBox.margin></Text>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="จุดเริ่มต้นของทุกสิ่ง" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ยินดีต้อนรับเข้าสู่โลกใบใหม่" />
                            </children></VBox>
                      </children>
                   </GridPane>
@@ -103,7 +113,7 @@
                         </Rectangle>
                         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="แนวคิดการพัฒนา">
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="JAVAPAI">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
@@ -111,7 +121,7 @@
                                     <Insets top="5.0" />
                                  </VBox.margin>
                               </Text>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="สวยเอาไว้ เรื่องใช้ช่างมัน" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="เกี่ยวกับโปรแกรม และ การพัฒนา" />
                            </children>
                         </VBox>
                      </children>
