--- a/src/main/resources/ku/cs/accountDetail.fxml
+++ b/src/main/resources/ku/cs/accountDetail.fxml
@@ -58,7 +58,7 @@
                               <String fx:value="bevel-brown" />
                            </styleClass>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" stylesheets="@style/PrimaryTheme.css" text="ประวัติการซื้อ" textFill="WHITE" GridPane.rowIndex="2">
+                        <Button mnemonicParsing="false" onAction="#handleToOrderPageButton" prefHeight="60.0" prefWidth="200.0" stylesheets="@style/PrimaryTheme.css" text="ประวัติการซื้อ" textFill="WHITE" GridPane.rowIndex="2">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
@@ -148,7 +148,7 @@
                                 <Font size="18.0" />
                             </font>
                         </Button>
-                        <Label layoutX="42.0" layoutY="236.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="ที่อยู่" textFill="#a05e07">
+                        <Label layoutX="23.0" layoutY="241.0" stylesheets="@style/PrimaryTheme.css" text="ที่อยู่" textFill="#a05e07">
                             <font>
                                 <Font name="JasmineUPC" size="36.0" />
                             </font>
@@ -158,12 +158,12 @@
                                 <Font size="18.0" />
                             </font>
                         </Button>
-                        <Label layoutX="44.0" layoutY="415.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="โปรโมชั่น" textFill="#a05e07">
+                        <Label layoutX="30.0" layoutY="413.0" stylesheets="@style/PrimaryTheme.css" text="โปรโมชั่น" textFill="#a05e07">
                             <font>
                                 <Font name="JasmineUPC" size="36.0" />
                             </font>
                         </Label>
-                        <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="224.0" layoutY="449.0" startX="-134.93331909179688" startY="-3.0517578125E-5" />
+                        <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="224.0" layoutY="449.0" startX="-210.39996337890625" startY="-3.0517578125E-5" />
                         <Label fx:id="birthdayLabel" layoutX="454.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthday" textAlignment="CENTER">
                             <font>
                                 <Font name="JasmineUPC" size="25.0" />
@@ -218,7 +218,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="225.0" layoutY="270.0" startX="-134.93331909179688" startY="-3.0517578125E-5" />
+                  <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="226.0" layoutY="275.0" startX="-213.20001220703125" startY="-3.0517578125E-5" />
                   <Button layoutX="508.0" layoutY="665.0" mnemonicParsing="false" onAction="#handleToReportButton" prefHeight="30.0" prefWidth="185.0" style="-fx-background-color: FFFFFF;" stylesheets="@style/PrimaryTheme.css" text="รายงานความไม่เหมาะสม" textFill="#b10000">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
