--- a/src/main/resources/ku/cs/choiceApplySubTypeBook.fxml
+++ b/src/main/resources/ku/cs/choiceApplySubTypeBook.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ChoiceApplySubtypeBookController" >
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.seller.ApplyBookController" >
    <children>
       <Label fx:id="subTypeBookLabel" layoutX="50.0" layoutY="10.0" text="ประเภทย่อย">
          <font>
