fix tracking number in order

--- a/src/main/resources/ku/cs/bookOrderOfUser.fxml
+++ b/src/main/resources/ku/cs/bookOrderOfUser.fxml
@@ -111,13 +111,17 @@
                               <Insets left="98.0" />
                            </GridPane.margin>
                         </ImageView>
-                        <Button mnemonicParsing="false" onAction="#handleToAccountDetailButton" prefHeight="60.0" prefWidth="200.0" styleClass="bevel-brown" stylesheets="@style/PrimaryTheme.css" text="ข้อมูลส่วนตัว" textFill="WHITE" GridPane.rowIndex="1">
+                        <Button mnemonicParsing="false" onAction="#handleToAccountDetailButton" prefHeight="60.0" prefWidth="200.0" stylesheets="@style/PrimaryTheme.css" text="ข้อมูลส่วนตัว" textFill="WHITE" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="70.0" top="10.0" />
                            </GridPane.margin>
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
+                           <styleClass>
+                              <String fx:value="bevel-brown" />
+                              <String fx:value="font_jasmine_20pt" />
+                           </styleClass>
                         </Button>
                         <Button mnemonicParsing="false" onAction="#handleToOrderPageButton" prefHeight="60.0" prefWidth="200.0" stylesheets="@style/PrimaryTheme.css" text="ประวัติการซื้อ" textFill="WHITE" GridPane.rowIndex="2">
                            <font>
