--- a/src/main/resources/ku/cs/orderUserItem.fxml
+++ b/src/main/resources/ku/cs/orderUserItem.fxml
@@ -10,7 +10,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="262.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.OrderUserItemController">
    <children>
       <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#d4c1a8" height="60.0" layoutX="30.0" layoutY="10.0" stroke="WHITE" strokeType="INSIDE" width="372.0" />
-      <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="200.0" layoutX="10.0" layoutY="47.0" stroke="WHITE" strokeType="INSIDE" width="665.0" />
+      <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="170.0" layoutX="10.0" layoutY="47.0" stroke="WHITE" strokeType="INSIDE" width="665.0" />
       <Label layoutX="200.0" layoutY="65.0" text="ชื่อหนังสือ">
          <font>
             <Font name="JasmineUPC" size="28.0" />
@@ -35,12 +35,7 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="200.0" layoutY="155.0" text="สถานะการจัดส่ง">
-         <font>
-            <Font name="JasmineUPC" size="28.0" />
-         </font>
-      </Label>
-      <Label fx:id="trakingNumberLabel" layoutX="355.0" layoutY="188.0" text="trakingNumberLabel" textFill="#a05e07">
+      <Label fx:id="trakingNumberLabel" layoutX="355.0" layoutY="160.0" text="trakingNumberLabel" textFill="#840502">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
@@ -65,16 +60,11 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="200.0" layoutY="185.0" text="เลขติดตามพัสดุ">
+      <Label layoutX="200.0" layoutY="157.0" text="เลขติดตามพัสดุ">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label fx:id="bookStatusLabel" layoutX="355.0" layoutY="158.0" text="bookStatusLabel" textFill="#840502">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Label>
-      <ImageView fx:id="bookImg" fitHeight="170.0" fitWidth="140.0" layoutX="45.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="bookImg" fitHeight="145.0" fitWidth="125.0" layoutX="45.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
