--- a/src/main/resources/ku/cs/newOrder.fxml
+++ b/src/main/resources/ku/cs/newOrder.fxml
@@ -4,6 +4,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
@@ -41,7 +45,7 @@
             <Font name="JasmineUPC" size="24.0" />
          </font>
       </Label>
-        <Button fx:id="editStatusButton" layoutX="560.0" layoutY="190.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="102.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="จัดส่งแล้ว" textFill="WHITE">
+        <Button fx:id="editStatusButton" layoutX="560.0" layoutY="190.0" mnemonicParsing="false" onAction="#handleEditOrderButton" prefHeight="34.0" prefWidth="102.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="จัดส่งแล้ว" textFill="WHITE">
             <font>
                 <Font name="JasmineUPC" size="22.0" />
             </font>
@@ -88,5 +92,17 @@
          </font>
       </Label>
       <ImageView fx:id="bookImageView" fitHeight="170.0" fitWidth="140.0" layoutX="45.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true" />
+      <VBox layoutX="135.0" layoutY="126.0" prefHeight="104.0" prefWidth="400.0">
+         <children>
+            <GridPane fx:id="gridPaneForPopup">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+         </children>
+      </VBox>
     </children>
 </AnchorPane>
