--- a/src/main/resources/ku/cs/shippedOrder.fxml
+++ b/src/main/resources/ku/cs/shippedOrder.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
@@ -15,11 +16,15 @@
                   <Font name="JasmineUPC" size="28.0" />
               </font>
           </Label>
-          <Label fx:id="bookNameLabel" layoutX="340.0" layoutY="68.0" text="โฮริมิยะ สาวมั่นกับนายมืดมน" textFill="#a05e07">
-              <font>
-                  <Font name="JasmineUPC" size="24.0" />
-              </font>
-          </Label>
+      <VBox layoutX="340.0" layoutY="68.0" prefHeight="18.0" prefWidth="322.0">
+         <children>
+                <Label fx:id="bookNameLabel" text="โฮริมิยะ สาวมั่นกับนายมืดมน" textFill="#a05e07" wrapText="true">
+                    <font>
+                        <Font name="JasmineUPC" size="24.0" />
+                    </font>
+                </Label>
+         </children>
+      </VBox>
           <Label layoutX="200.0" layoutY="95.0" text="จำนวนสินค้า">
               <font>
                   <Font name="JasmineUPC" size="28.0" />
