--- a/src/main/resources/ku/cs/shippedOrderPopUp.fxml
+++ b/src/main/resources/ku/cs/shippedOrderPopUp.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -43,15 +44,19 @@
       <Button layoutX="348.0" layoutY="12.0" mnemonicParsing="false" onAction="#handleBackToOrderListButton" style="-fx-background-color: transparent;">
          <graphic>
             <ImageView fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
-               <Image url="@image/BackIcon.png"/>
+               <Image url="@image/BackIcon.png" />
             </ImageView>
          </graphic>
       </Button>
-      <Label fx:id="bookNamePopUpLabel" layoutX="90.0" layoutY="63.0" maxWidth="304.0" prefHeight="15.0" prefWidth="298.0" text="bookName" wrapText="true">
-         <font>
-            <Font name="JasmineUPC" size="18.0" />
-         </font>
-      </Label>
+      <VBox layoutX="90.0" layoutY="63.0">
+         <children>
+            <Label fx:id="bookNamePopUpLabel" maxWidth="304.0" prefHeight="15.0" prefWidth="298.0" text="bookName" wrapText="true">
+               <font>
+                  <Font name="JasmineUPC" size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
       <Text fill="#f99f28" layoutX="20.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อผู้ซื้อ">
          <font>
             <Font name="JasmineUPC" size="24.0" />
